changes to path

--- a/src/machine_learning/train.ipynb
+++ b/src/machine_learning/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 148,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-09T18:07:41.429701Z",
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV files: ['../data/csv/calc_case_description_test_set.csv', '../data/csv/calc_case_description_train_set.csv', '../data/csv/dicom_info.csv', '../data/csv/mass_case_description_test_set.csv', '../data/csv/mass_case_description_train_set.csv', '../data/csv/meta.csv']\n"
+      "CSV files: ['../../data/csv/calc_case_description_test_set.csv', '../../data/csv/calc_case_description_train_set.csv', '../../data/csv/dicom_info.csv', '../../data/csv/mass_case_description_test_set.csv', '../../data/csv/mass_case_description_train_set.csv', '../../data/csv/meta.csv']\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "ROOT = \"../data\"\n",
+    "ROOT = \"../../data\"\n",
     "print(\"CSV files:\", glob.glob(os.path.join(ROOT, \"csv\", \"*.csv\")))\n"
    ]
   },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 149,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-09T18:08:37.356434Z",
@@ -373,10 +373,10 @@
    ],
    "source": [
     "import os\n",
-    "print(os.listdir(\"../data\")[:10])\n",
+    "print(os.listdir(\"../../data\")[:10])\n",
     "\n",
     "# Helper function\n",
-    "def replace_path(series, old_path=\"CBIS-DDSM\", new_path=\"../data\"):\n",
+    "def replace_path(series, old_path=\"CBIS-DDSM\", new_path=\"../../data\"):\n",
     "    return series.str.replace(old_path, new_path, regex=True).str.replace(\".dcm\", \".jpg\")\n",
     "\n",
     "# Apply this to your dataframe\n",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-09T18:08:43.31227Z",
@@ -450,12 +450,12 @@
     "import glob, os\n",
     "\n",
     "# collect every .jpg file path\n",
-    "jpeg_paths = glob.glob(f\"{ROOT}/jpeg/**/*jpg\", recursive=True)\n",
+    "jpeg_paths = glob.glob(f\"{ROOT}/jpeg/**/*.jpg\", recursive=True)\n",
     "\n",
     "# map the DICOM-ID (the long number) → real .jpg path\n",
     "jpeg_map = {}\n",
     "for p in jpeg_paths:\n",
-    "    key = p.split('/')[3]           # the 6th element is the DICOM-ID\n",
+    "    key = p.split('/')[4]           # the 5th element is the DICOM-ID\n",
     "    jpeg_map[key] = p\n",
     "\n",
     "print(\"Total JPEGs found:\", len(jpeg_map))\n",
@@ -1093,14 +1093,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Models will be saved to: ../models\n"
+      "Models will be saved to: ../../models\n"
      ]
     }
    ],
@@ -1108,7 +1108,7 @@
     "import os\n",
     "\n",
     "# Create model directory if it doesn't exist\n",
-    "MODEL_DIR = \"../models\"\n",
+    "MODEL_DIR = \"../../models\"\n",
     "os.makedirs(MODEL_DIR, exist_ok=True)\n",
     "print(f\"Models will be saved to: {MODEL_DIR}\")"
    ]
@@ -2968,14 +2968,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved models in ../models:\n",
+      "Saved models in ../../models:\n",
       "- best_b3.keras (124.14 MB)\n",
       "- best_cnn.keras (342.00 MB)\n",
       "- best_efficientnet.keras (46.91 MB)\n",
